# biohack

./: .gitignore  CLAUDE.md  README.md  TODO.md  arch.md  ch20_URA7_URA8_001_Brightfield_t006_z05.tiff  ch20_URA7_URA8_001_Brightfield_t007_z01.tiff  ch20_URA7_URA8_002_Brightfield_t002_z05.tiff  detection_pipe.ipynb  main.py  pyproject.toml  requirements.txt  run_dbscan_exps.py  spec.md  test.ipynb  test_2.ipynb
Presentations/: Biohack_Presentation.pptx  ~$Biohack_Presentation.pptx
config/: image_detection.yaml
data/: ch20_URA7_URA8_001-crop1.tiff  ch20_URA7_URA8_001-crop3.tiff  ch20_URA7_URA8_002-crop1.tiff  ch20_URA7_URA8_002-crop2.tiff  ch20_URA7_URA8_002-crop3.tiff  ch20_URA7_URA8_002-crop4.tiff  ch20_URA7_URA8_002-crop6.tiff
data/annotated_data/: ch20_URA7_URA8_001-crop1_frame_10_mask.tif  ch20_URA7_URA8_001-crop1_frame_11_mask.tif  ch20_URA7_URA8_001-crop1_frame_12_mask.tif  ch20_URA7_URA8_001-crop1_frame_4_mask.tif  ch20_URA7_URA8_001-crop1_frame_50_mask.tif  ch20_URA7_URA8_001-crop1_frame_51_mask.tif  ch20_URA7_URA8_001-crop1_frame_52_mask.tif  ch20_URA7_URA8_001-crop1_frame_6_mask.tif  ch20_URA7_URA8_001-crop1_frame_7_mask.tif  ch20_URA7_URA8_001-crop1_frame_8_mask.tif  ch20_URA7_URA8_001-crop1_frame_9_mask.tif  ch20_URA7_URA8_001-crop2_frame_10_mask.tif  ch20_URA7_URA8_001-crop2_frame_12_mask.tif  ch20_URA7_URA8_001-crop2_frame_13_mask.tif  ch20_URA7_URA8_001-crop2_frame_14_mask.tif  (+27 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  (+9 more)
notebook/: test.ipynb  test_open_ai.ipynb
notebooks/: brian_analysis.ipynb
quick_test/: ch20_URA7_URA8_001_Brightfield_GFP_z01_cropped.tiff
scripts/: cell_filament_tracking_USE_THIS.ipynb  cellpose_segmentation_testing.ipynb  eval_metrics.py  pillar_removal.ipynb  split_tiffs.py  train.py
server/: nginx-frontend.conf  upload-api.service  upload_server.py
test/: cell_tracks_per_frame_with_filaments.csv
(+59965 files in other folders)
