[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "biohack"
version = "0.1.0"
description = ""
authors = [{ name = "Brian Daniel", email = "briandaniel789@gmail.com" }]
readme = "README.md"
requires-python = "==3.12.*"


dependencies = ["pillow", "scikit-image", "numpy", "ipykernel", "pyyaml", "tqdm"]

[dependency-groups]
dev = ["poethepoet >=0.37", "ruff>=0.13", "pre-commit>=4.4.0", "matplotlib"]

[tool.poe.tasks]
format = "ruff format src tests"
lint = "ruff check --fix src tests"


[tool.hatch.version]
path = "src/biohack/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/biohack"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "N", "A", "PL"]
ignore = []

[tool.mypy]
python_version = "3.12"
